--- a/figures_hadron.tex
+++ b/figures_hadron.tex
@@ -218,38 +218,38 @@
 \begin{figure}
   \centering
 
-  \begin{overpic}[clip, rviewport=0 0.125 1 0.94,width=0.4\textwidth]{dedx/fraction_158_fl0_v1_c0_p0}
+  \begin{overpic}[clip, rviewport=0 0.125 1 0.94,width=0.45\textwidth]{dedx/fraction_158_fl0_v1_c0_p0}
     \put(18,49){(a)}
   \end{overpic}
-  \begin{overpic}[clip, rviewport=0 0.125 1 0.94,width=0.4\textwidth]{dedx/fraction_158_fl0_v1_c1_p0}
+  \begin{overpic}[clip, rviewport=0 0.125 1 0.94,width=0.45\textwidth]{dedx/fraction_158_fl0_v1_c1_p0}
     \put(18,49){(b)}
   \end{overpic}
 
-  \begin{overpic}[clip, rviewport=0 0.125 1 0.94,width=0.4\textwidth]{dedx/fraction_158_fl0_v1_c0_p1}
+  \begin{overpic}[clip, rviewport=0 0.125 1 0.94,width=0.45\textwidth]{dedx/fraction_158_fl0_v1_c0_p1}
     \put(18,49){(c)}
   \end{overpic}
-  \begin{overpic}[clip, rviewport=0 0.125 1 0.94,width=0.4\textwidth]{dedx/fraction_158_fl0_v1_c1_p1}
+  \begin{overpic}[clip, rviewport=0 0.125 1 0.94,width=0.45\textwidth]{dedx/fraction_158_fl0_v1_c1_p1}
     \put(18,49){(d)}
   \end{overpic}
 
-   \begin{overpic}[clip, rviewport=0 0.125 1 0.94,width=0.4\textwidth]{dedx/fraction_158_fl0_v1_c0_p2}
+   \begin{overpic}[clip, rviewport=0 0.125 1 0.94,width=0.45\textwidth]{dedx/fraction_158_fl0_v1_c0_p2}
     \put(18,49){(e)}
   \end{overpic}
-  \begin{overpic}[clip, rviewport=0 0.125 1 0.94,width=0.4\textwidth]{dedx/fraction_158_fl0_v1_c1_p2}
+  \begin{overpic}[clip, rviewport=0 0.125 1 0.94,width=0.45\textwidth]{dedx/fraction_158_fl0_v1_c1_p2}
     \put(18,49){(f)}
   \end{overpic}
 
-   \begin{overpic}[clip, rviewport=0 0.125 1 0.94,width=0.4\textwidth]{dedx/fraction_158_fl0_v1_c0_p3}
+   \begin{overpic}[clip, rviewport=0 0.125 1 0.94,width=0.45\textwidth]{dedx/fraction_158_fl0_v1_c0_p3}
     \put(18,49){(g)}
   \end{overpic}
-  \begin{overpic}[clip, rviewport=0 0.125 1 0.94,width=0.4\textwidth]{dedx/fraction_158_fl0_v1_c1_p3}
+  \begin{overpic}[clip, rviewport=0 0.125 1 0.94,width=0.45\textwidth]{dedx/fraction_158_fl0_v1_c1_p3}
     \put(18,49){(h)}
   \end{overpic}
 
-   \begin{overpic}[clip, rviewport=0 0 1 0.94,width=0.4\textwidth]{dedx/fraction_158_fl0_v1_c0_p4}
+   \begin{overpic}[clip, rviewport=0 0 1 0.94,width=0.45\textwidth]{dedx/fraction_158_fl0_v1_c0_p4}
     \put(18,58){(i)}
   \end{overpic}
-  \begin{overpic}[clip, rviewport=0 0 1 0.94,width=0.4\textwidth]{dedx/fraction_158_fl0_v1_c1_p4}
+  \begin{overpic}[clip, rviewport=0 0 1 0.94,width=0.45\textwidth]{dedx/fraction_158_fl0_v1_c1_p4}
     \put(18,58){(j)}
   \end{overpic}
   
@@ -262,38 +262,38 @@
 \begin{figure}
   \centering
 
-  \begin{overpic}[clip, rviewport=0 0.125 1 0.94,width=0.4\textwidth]{dedx/fraction_350_fl0_v0_c0_p0}
+  \begin{overpic}[clip, rviewport=0 0.125 1 0.94,width=0.45\textwidth]{dedx/fraction_350_fl0_v0_c0_p0}
     \put(18,49){(a)}
   \end{overpic}
-  \begin{overpic}[clip, rviewport=0 0.125 1 0.94,width=0.4\textwidth]{dedx/fraction_350_fl0_v0_c1_p0}
+  \begin{overpic}[clip, rviewport=0 0.125 1 0.94,width=0.45\textwidth]{dedx/fraction_350_fl0_v0_c1_p0}
     \put(18,49){(b)}
   \end{overpic}
 
-  \begin{overpic}[clip, rviewport=0 0.125 1 0.94,width=0.4\textwidth]{dedx/fraction_350_fl0_v0_c0_p1}
+  \begin{overpic}[clip, rviewport=0 0.125 1 0.94,width=0.45\textwidth]{dedx/fraction_350_fl0_v0_c0_p1}
     \put(18,49){(c)}
   \end{overpic}
-  \begin{overpic}[clip, rviewport=0 0.125 1 0.94,width=0.4\textwidth]{dedx/fraction_350_fl0_v0_c1_p1}
+  \begin{overpic}[clip, rviewport=0 0.125 1 0.94,width=0.45\textwidth]{dedx/fraction_350_fl0_v0_c1_p1}
     \put(18,49){(d)}
   \end{overpic}
 
-   \begin{overpic}[clip, rviewport=0 0.125 1 0.94,width=0.4\textwidth]{dedx/fraction_350_fl0_v0_c0_p2}
+   \begin{overpic}[clip, rviewport=0 0.125 1 0.94,width=0.45\textwidth]{dedx/fraction_350_fl0_v0_c0_p2}
     \put(18,49){(e)}
   \end{overpic}
-  \begin{overpic}[clip, rviewport=0 0.125 1 0.94,width=0.4\textwidth]{dedx/fraction_350_fl0_v0_c1_p2}
+  \begin{overpic}[clip, rviewport=0 0.125 1 0.94,width=0.45\textwidth]{dedx/fraction_350_fl0_v0_c1_p2}
     \put(18,49){(f)}
   \end{overpic}
 
-   \begin{overpic}[clip, rviewport=0 0.125 1 0.94,width=0.4\textwidth]{dedx/fraction_350_fl0_v0_c0_p3}
+   \begin{overpic}[clip, rviewport=0 0.125 1 0.94,width=0.45\textwidth]{dedx/fraction_350_fl0_v0_c0_p3}
     \put(18,49){(g)}
   \end{overpic}
-  \begin{overpic}[clip, rviewport=0 0.125 1 0.94,width=0.4\textwidth]{dedx/fraction_350_fl0_v0_c1_p3}
+  \begin{overpic}[clip, rviewport=0 0.125 1 0.94,width=0.45\textwidth]{dedx/fraction_350_fl0_v0_c1_p3}
     \put(18,49){(h)}
   \end{overpic}
 
-   \begin{overpic}[clip, rviewport=0 0 1 0.94,width=0.4\textwidth]{dedx/fraction_350_fl0_v0_c0_p4}
+   \begin{overpic}[clip, rviewport=0 0 1 0.94,width=0.45\textwidth]{dedx/fraction_350_fl0_v0_c0_p4}
     \put(18,58){(i)}
   \end{overpic}
-  \begin{overpic}[clip, rviewport=0 0 1 0.94,width=0.4\textwidth]{dedx/fraction_350_fl0_v0_c1_p4}
+  \begin{overpic}[clip, rviewport=0 0 1 0.94,width=0.45\textwidth]{dedx/fraction_350_fl0_v0_c1_p4}
     \put(18,58){(j)}
   \end{overpic}
   
@@ -306,38 +306,38 @@
 \begin{figure}
   \centering
 
-  \begin{overpic}[clip, rviewport=0 0.125 1 0.94,width=0.4\textwidth]{dedx/fraction_350_fl0_v1_c0_p0}
+  \begin{overpic}[clip, rviewport=0 0.125 1 0.94,width=0.45\textwidth]{dedx/fraction_350_fl0_v1_c0_p0}
     \put(18,49){(a)}
   \end{overpic}
-  \begin{overpic}[clip, rviewport=0 0.125 1 0.94,width=0.4\textwidth]{dedx/fraction_350_fl0_v1_c1_p0}
+  \begin{overpic}[clip, rviewport=0 0.125 1 0.94,width=0.45\textwidth]{dedx/fraction_350_fl0_v1_c1_p0}
     \put(18,49){(b)}
   \end{overpic}
 
-  \begin{overpic}[clip, rviewport=0 0.125 1 0.94,width=0.4\textwidth]{dedx/fraction_350_fl0_v1_c0_p1}
+  \begin{overpic}[clip, rviewport=0 0.125 1 0.94,width=0.45\textwidth]{dedx/fraction_350_fl0_v1_c0_p1}
     \put(18,49){(c)}
   \end{overpic}
-  \begin{overpic}[clip, rviewport=0 0.125 1 0.94,width=0.4\textwidth]{dedx/fraction_350_fl0_v1_c1_p1}
+  \begin{overpic}[clip, rviewport=0 0.125 1 0.94,width=0.45\textwidth]{dedx/fraction_350_fl0_v1_c1_p1}
     \put(18,49){(d)}
   \end{overpic}
 
-   \begin{overpic}[clip, rviewport=0 0.125 1 0.94,width=0.4\textwidth]{dedx/fraction_350_fl0_v1_c0_p2}
+   \begin{overpic}[clip, rviewport=0 0.125 1 0.94,width=0.45\textwidth]{dedx/fraction_350_fl0_v1_c0_p2}
     \put(18,49){(e)}
   \end{overpic}
-  \begin{overpic}[clip, rviewport=0 0.125 1 0.94,width=0.4\textwidth]{dedx/fraction_350_fl0_v1_c1_p2}
+  \begin{overpic}[clip, rviewport=0 0.125 1 0.94,width=0.45\textwidth]{dedx/fraction_350_fl0_v1_c1_p2}
     \put(18,49){(f)}
   \end{overpic}
 
-   \begin{overpic}[clip, rviewport=0 0.125 1 0.94,width=0.4\textwidth]{dedx/fraction_350_fl0_v1_c0_p3}
+   \begin{overpic}[clip, rviewport=0 0.125 1 0.94,width=0.45\textwidth]{dedx/fraction_350_fl0_v1_c0_p3}
     \put(18,49){(g)}
   \end{overpic}
-  \begin{overpic}[clip, rviewport=0 0.125 1 0.94,width=0.4\textwidth]{dedx/fraction_350_fl0_v1_c1_p3}
+  \begin{overpic}[clip, rviewport=0 0.125 1 0.94,width=0.45\textwidth]{dedx/fraction_350_fl0_v1_c1_p3}
     \put(18,49){(h)}
   \end{overpic}
 
-   \begin{overpic}[clip, rviewport=0 0 1 0.94,width=0.4\textwidth]{dedx/fraction_350_fl0_v1_c0_p4}
+   \begin{overpic}[clip, rviewport=0 0 1 0.94,width=0.45\textwidth]{dedx/fraction_350_fl0_v1_c0_p4}
     \put(18,58){(i)}
   \end{overpic}
-  \begin{overpic}[clip, rviewport=0 0 1 0.94,width=0.4\textwidth]{dedx/fraction_350_fl0_v1_c1_p4}
+  \begin{overpic}[clip, rviewport=0 0 1 0.94,width=0.45\textwidth]{dedx/fraction_350_fl0_v1_c1_p4}
     \put(18,58){(j)}
   \end{overpic}
   
@@ -345,234 +345,275 @@
   \label{fig:hadron:dedx:fit:frac350w}
 \end{figure}
 
-%%%%%%%%%% FRACTIONS %%%%%%%%%%%%%%
-\begin{figure}
-  \centering
-  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/fraction_158_fl0_v1_c0_p0}
-  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/fraction_158_fl0_v1_c1_p0}
-
-  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/fraction_158_fl0_v1_c0_p1}
-  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/fraction_158_fl0_v1_c1_p1}
-
-  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/fraction_158_fl0_v1_c0_p2}
-  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/fraction_158_fl0_v1_c1_p2}
-
-
-  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/fraction_158_fl0_v1_c0_p3}
-  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/fraction_158_fl0_v1_c1_p3}
-
-  \includegraphics[clip, rviewport=0 0 1 0.94,width=0.4\textwidth]{dedx/fraction_158_fl0_v1_c0_p4}
-  \includegraphics[clip, rviewport=0 0 1 0.94,width=0.4\textwidth]{dedx/fraction_158_fl0_v1_c1_p4}
-
-  \caption{Particle fractions obtained from the fit of the WST dataset at 158 \GeVc.}
-  \label{fig:hadron:dedx:fit:frac158w}
-\end{figure}
-
-
-%%%%%%%%%% FRACTIONS %%%%%%%%%%%%%%
-\begin{figure}
-  \centering
-  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/fraction_350_fl0_v0_c0_p0}
-  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/fraction_350_fl0_v0_c1_p0}
-
-  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/fraction_350_fl0_v0_c0_p1}
-  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/fraction_350_fl0_v0_c1_p1}
-
-  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/fraction_350_fl0_v0_c0_p2}
-  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/fraction_350_fl0_v0_c1_p2}
-
-
-  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/fraction_350_fl0_v0_c0_p3}
-  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/fraction_350_fl0_v0_c1_p3}
-
-  \includegraphics[clip, rviewport=0 0 1 0.94,width=0.4\textwidth]{dedx/fraction_350_fl0_v0_c0_p4}
-  \includegraphics[clip, rviewport=0 0 1 0.94,width=0.4\textwidth]{dedx/fraction_350_fl0_v0_c1_p4}
-
-  \caption{Particle fractions obtained from the fit of the RST dataset at 350 \GeVc.}
-  \label{fig:hadron:dedx:fit:frac350r}
-\end{figure}
-
-%%%%%%%%%% FRACTIONS %%%%%%%%%%%%%%
-\begin{figure}
-  \centering
-  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/fraction_350_fl0_v1_c0_p0}
-  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/fraction_350_fl0_v1_c1_p0}
-
-  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/fraction_350_fl0_v1_c0_p1}
-  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/fraction_350_fl0_v1_c1_p1}
-
-  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/fraction_350_fl0_v1_c0_p2}
-  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/fraction_350_fl0_v1_c1_p2}
-
-
-  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/fraction_350_fl0_v1_c0_p3}
-  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/fraction_350_fl0_v1_c1_p3}
-
-  \includegraphics[clip, rviewport=0 0 1 0.94,width=0.4\textwidth]{dedx/fraction_350_fl0_v1_c0_p4}
-  \includegraphics[clip, rviewport=0 0 1 0.94,width=0.4\textwidth]{dedx/fraction_350_fl0_v1_c1_p4}
-
-  \caption{Particle fractions obtained from the fit of the WST dataset at 350 \GeVc.}
-  \label{fig:hadron:dedx:fit:frac350w}
-\end{figure}
-
 \clearpage
 
-
-
 %%%%%%%%%% FAKE REL SIG %%%%%%%%%%%%%%
-\begin{figure}
+\begin{figure}[!ht]
   \centering
-  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/fake_rel_sig_158_fl0_v1_c0_p1}
-  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/fake_rel_sig_158_fl0_v1_c1_p1}
+  
+  \begin{overpic}[clip, rviewport=0 0.145 1 0.94,width=0.45\textwidth]{dedx/fake_rel_sig_158_fl0_v1_c0_p1}
+    \put(18,48){(a)}
+  \end{overpic}
+  \begin{overpic}[clip, rviewport=0 0.145 1 0.94,width=0.45\textwidth]{dedx/fake_rel_sig_158_fl0_v1_c1_p1}
+    \put(18,48){(b)}
+  \end{overpic}
 
-  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/fake_rel_sig_158_fl0_v1_c0_p2}
-  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/fake_rel_sig_158_fl0_v1_c1_p2}
+  \begin{overpic}[clip, rviewport=0 0.145 1 0.94,width=0.45\textwidth]{dedx/fake_rel_sig_158_fl0_v1_c0_p2}
+    \put(18,48){(c)}
+  \end{overpic}
+  \begin{overpic}[clip, rviewport=0 0.145 1 0.94,width=0.45\textwidth]{dedx/fake_rel_sig_158_fl0_v1_c1_p2}
+    \put(18,48){(d)}
+  \end{overpic}
 
-  \includegraphics[clip, rviewport=0 0 1 0.94,width=0.4\textwidth]{dedx/fake_rel_sig_158_fl0_v1_c0_p3}
-  \includegraphics[clip, rviewport=0 0 1 0.94,width=0.4\textwidth]{dedx/fake_rel_sig_158_fl0_v1_c1_p3}
-
-  \caption{Relative standard deviation of the particle fractions obtained with SDEs for WST and 158 \GeVc dataset.}
+  \begin{overpic}[clip, rviewport=0 0 1 0.94,width=0.45\textwidth]{dedx/fake_rel_sig_158_fl0_v1_c0_p3}
+    \put(18,58){(e)}
+  \end{overpic}
+  \begin{overpic}[clip, rviewport=0 0 1 0.94,width=0.45\textwidth]{dedx/fake_rel_sig_158_fl0_v1_c1_p3}
+    \put(18,58){(f)}
+  \end{overpic}
+  
+  \caption{Relative standard deviation ($\sigma_r$, see the definition in the text) of the particle fractions obtained with the SDEs for the WST and 158 \GeVc case. The $\pi^+$ case is shown in (a), $\pi^-$ in (b), K$^+$ in (c), K$^-$ in (d), p$^+$ in (e) and p$^-$ in (f).}
   \label{fig:hadron:dedx:fit:fake:relsig158w}
 \end{figure}
 
-
-
 %%%%%%%%%% FAKE REL SIG %%%%%%%%%%%%%%
-\begin{figure}
+\begin{figure}[!ht]
   \centering
-  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/fake_rel_sig_350_fl0_v0_c0_p1}
-  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/fake_rel_sig_350_fl0_v0_c1_p1}
+  
+  \begin{overpic}[clip, rviewport=0 0.145 1 0.94,width=0.45\textwidth]{dedx/fake_rel_sig_350_fl0_v0_c0_p1}
+    \put(18,48){(a)}
+  \end{overpic}
+  \begin{overpic}[clip, rviewport=0 0.145 1 0.94,width=0.45\textwidth]{dedx/fake_rel_sig_350_fl0_v0_c1_p1}
+    \put(18,48){(b)}
+  \end{overpic}
 
-  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/fake_rel_sig_350_fl0_v0_c0_p2}
-  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/fake_rel_sig_350_fl0_v0_c1_p2}
+  \begin{overpic}[clip, rviewport=0 0.145 1 0.94,width=0.45\textwidth]{dedx/fake_rel_sig_350_fl0_v0_c0_p2}
+    \put(18,48){(c)}
+  \end{overpic}
+  \begin{overpic}[clip, rviewport=0 0.145 1 0.94,width=0.45\textwidth]{dedx/fake_rel_sig_350_fl0_v0_c1_p2}
+    \put(18,48){(d)}
+  \end{overpic}
 
-  \includegraphics[clip, rviewport=0 0 1 0.94,width=0.4\textwidth]{dedx/fake_rel_sig_350_fl0_v0_c0_p3}
-  \includegraphics[clip, rviewport=0 0 1 0.94,width=0.4\textwidth]{dedx/fake_rel_sig_350_fl0_v0_c1_p3}
-
-
-  \caption{Relative standard deviation of the particle fractions obtained with SDEs for RST and 350 \GeVc dataset.}
+  \begin{overpic}[clip, rviewport=0 0 1 0.94,width=0.45\textwidth]{dedx/fake_rel_sig_350_fl0_v0_c0_p3}
+    \put(18,58){(e)}
+  \end{overpic}
+  \begin{overpic}[clip, rviewport=0 0 1 0.94,width=0.45\textwidth]{dedx/fake_rel_sig_350_fl0_v0_c1_p3}
+    \put(18,58){(f)}
+  \end{overpic}
+  
+  \caption{Relative standard deviation ($\sigma_r$, see the definition in the text) of the particle fractions obtained with the SDEs for the RST and 350 \GeVc case. The $\pi^+$ case is shown in (a), $\pi^-$ in (b), K$^+$ in (c), K$^-$ in (d), p$^+$ in (e) and p$^-$ in (f).}
   \label{fig:hadron:dedx:fit:fake:relsig350r}
 \end{figure}
 
+
 %%%%%%%%%% FAKE REL SIG %%%%%%%%%%%%%%
-\begin{figure}
+\begin{figure}[!ht]
   \centering
-  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/fake_rel_sig_350_fl0_v1_c0_p1}
-  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/fake_rel_sig_350_fl0_v1_c1_p1}
+  
+  \begin{overpic}[clip, rviewport=0 0.145 1 0.94,width=0.45\textwidth]{dedx/fake_rel_sig_350_fl0_v1_c0_p1}
+    \put(18,48){(a)}
+  \end{overpic}
+  \begin{overpic}[clip, rviewport=0 0.145 1 0.94,width=0.45\textwidth]{dedx/fake_rel_sig_350_fl0_v1_c1_p1}
+    \put(18,48){(b)}
+  \end{overpic}
 
-  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/fake_rel_sig_350_fl0_v1_c0_p2}
-  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/fake_rel_sig_350_fl0_v1_c1_p2}
+  \begin{overpic}[clip, rviewport=0 0.145 1 0.94,width=0.45\textwidth]{dedx/fake_rel_sig_350_fl0_v1_c0_p2}
+    \put(18,48){(c)}
+  \end{overpic}
+  \begin{overpic}[clip, rviewport=0 0.145 1 0.94,width=0.45\textwidth]{dedx/fake_rel_sig_350_fl0_v1_c1_p2}
+    \put(18,48){(d)}
+  \end{overpic}
 
-  \includegraphics[clip, rviewport=0 0 1 0.94,width=0.4\textwidth]{dedx/fake_rel_sig_350_fl0_v1_c0_p3}
-  \includegraphics[clip, rviewport=0 0 1 0.94,width=0.4\textwidth]{dedx/fake_rel_sig_350_fl0_v1_c1_p3}
-
-  \caption{Relative standard deviation of the particle fractions obtained with SDEs for WST and 350 \GeVc dataset.}
+  \begin{overpic}[clip, rviewport=0 0 1 0.94,width=0.45\textwidth]{dedx/fake_rel_sig_350_fl0_v1_c0_p3}
+    \put(18,58){(e)}
+  \end{overpic}
+  \begin{overpic}[clip, rviewport=0 0 1 0.94,width=0.45\textwidth]{dedx/fake_rel_sig_350_fl0_v1_c1_p3}
+    \put(18,58){(f)}
+  \end{overpic}
+  
+  \caption{Relative standard deviation ($\sigma_r$, see the definition in the text) of the particle fractions obtained with the SDEs for the WST and 350 \GeVc case. The $\pi^+$ case is shown in (a), $\pi^-$ in (b), K$^+$ in (c), K$^-$ in (d), p$^+$ in (e) and p$^-$ in (f).}
   \label{fig:hadron:dedx:fit:fake:relsig350w}
 \end{figure}
 
 
 %%%%%%%%%% FAKE REL DEV %%%%%%%%%%%%%%
-\begin{figure}
+\begin{figure}[!ht]
   \centering
-  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/fake_rel_dev_158_fl0_v1_c0_p1}
-  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/fake_rel_dev_158_fl0_v1_c1_p1}
+  
+  \begin{overpic}[clip, rviewport=0 0.145 1 0.94,width=0.45\textwidth]{dedx/fake_rel_dev_158_fl0_v1_c0_p1}
+    \put(18,48){(a)}
+  \end{overpic}
+  \begin{overpic}[clip, rviewport=0 0.145 1 0.94,width=0.45\textwidth]{dedx/fake_rel_dev_158_fl0_v1_c1_p1}
+    \put(18,48){(b)}
+  \end{overpic}
 
-  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/fake_rel_dev_158_fl0_v1_c0_p2}
-  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/fake_rel_dev_158_fl0_v1_c1_p2}
+  \begin{overpic}[clip, rviewport=0 0.145 1 0.94,width=0.45\textwidth]{dedx/fake_rel_dev_158_fl0_v1_c0_p2}
+    \put(18,48){(c)}
+  \end{overpic}
+  \begin{overpic}[clip, rviewport=0 0.145 1 0.94,width=0.45\textwidth]{dedx/fake_rel_dev_158_fl0_v1_c1_p2}
+    \put(18,48){(d)}
+  \end{overpic}
 
-  \includegraphics[clip, rviewport=0 0 1 0.94,width=0.4\textwidth]{dedx/fake_rel_dev_158_fl0_v1_c0_p3}
-  \includegraphics[clip, rviewport=0 0 1 0.94,width=0.4\textwidth]{dedx/fake_rel_dev_158_fl0_v1_c1_p3}
-
-  \caption{Average relative bias of the particle fractions obtained with SDEs for WST and 158 \GeVc dataset.}
+  \begin{overpic}[clip, rviewport=0 0 1 0.94,width=0.45\textwidth]{dedx/fake_rel_dev_158_fl0_v1_c0_p3}
+    \put(18,58){(e)}
+  \end{overpic}
+  \begin{overpic}[clip, rviewport=0 0 1 0.94,width=0.45\textwidth]{dedx/fake_rel_dev_158_fl0_v1_c1_p3}
+    \put(18,58){(f)}
+  \end{overpic}
+  
+  \caption{Average relative bias ($\delta_r$, see the definition in the text) of the particle fractions obtained with the SDEs for the WST and 158 \GeVc case. The $\pi^+$ case is shown in (a), $\pi^-$ in (b), K$^+$ in (c), K$^-$ in (d), p$^+$ in (e) and p$^-$ in (f).}
   \label{fig:hadron:dedx:fit:fake:reldev158w}
 \end{figure}
 
-
-
 %%%%%%%%%% FAKE REL DEV %%%%%%%%%%%%%%
-\begin{figure}
+\begin{figure}[!ht]
   \centering
-  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/fake_rel_dev_350_fl0_v0_c0_p1}
-  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/fake_rel_dev_350_fl0_v0_c1_p1}
+  
+  \begin{overpic}[clip, rviewport=0 0.145 1 0.94,width=0.45\textwidth]{dedx/fake_rel_dev_350_fl0_v0_c0_p1}
+    \put(18,48){(a)}
+  \end{overpic}
+  \begin{overpic}[clip, rviewport=0 0.145 1 0.94,width=0.45\textwidth]{dedx/fake_rel_dev_350_fl0_v0_c1_p1}
+    \put(18,48){(b)}
+  \end{overpic}
 
-  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/fake_rel_dev_350_fl0_v0_c0_p2}
-  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/fake_rel_dev_350_fl0_v0_c1_p2}
+  \begin{overpic}[clip, rviewport=0 0.145 1 0.94,width=0.45\textwidth]{dedx/fake_rel_dev_350_fl0_v0_c0_p2}
+    \put(18,48){(c)}
+  \end{overpic}
+  \begin{overpic}[clip, rviewport=0 0.145 1 0.94,width=0.45\textwidth]{dedx/fake_rel_dev_350_fl0_v0_c1_p2}
+    \put(18,48){(d)}
+  \end{overpic}
 
-  \includegraphics[clip, rviewport=0 0 1 0.94,width=0.4\textwidth]{dedx/fake_rel_dev_350_fl0_v0_c0_p3}
-  \includegraphics[clip, rviewport=0 0 1 0.94,width=0.4\textwidth]{dedx/fake_rel_dev_350_fl0_v0_c1_p3}
-
-
-  \caption{Average relative bias of the particle fractions obtained with SDEs for RST and 350 \GeVc dataset.}
+  \begin{overpic}[clip, rviewport=0 0 1 0.94,width=0.45\textwidth]{dedx/fake_rel_dev_350_fl0_v0_c0_p3}
+    \put(18,58){(e)}
+  \end{overpic}
+  \begin{overpic}[clip, rviewport=0 0 1 0.94,width=0.45\textwidth]{dedx/fake_rel_dev_350_fl0_v0_c1_p3}
+    \put(18,58){(f)}
+  \end{overpic}
+  
+  \caption{Average relative bias ($\delta_r$, see the definition in the text) of the particle fractions obtained with the SDEs for the RST and 350 \GeVc case. The $\pi^+$ case is shown in (a), $\pi^-$ in (b), K$^+$ in (c), K$^-$ in (d), p$^+$ in (e) and p$^-$ in (f).}
   \label{fig:hadron:dedx:fit:fake:reldev350r}
 \end{figure}
 
 %%%%%%%%%% FAKE REL DEV %%%%%%%%%%%%%%
-\begin{figure}
+\begin{figure}[!ht]
   \centering
-  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/fake_rel_dev_350_fl0_v1_c0_p1}
-  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/fake_rel_dev_350_fl0_v1_c1_p1}
+  
+  \begin{overpic}[clip, rviewport=0 0.145 1 0.94,width=0.45\textwidth]{dedx/fake_rel_dev_350_fl0_v1_c0_p1}
+    \put(18,48){(a)}
+  \end{overpic}
+  \begin{overpic}[clip, rviewport=0 0.145 1 0.94,width=0.45\textwidth]{dedx/fake_rel_dev_350_fl0_v1_c1_p1}
+    \put(18,48){(b)}
+  \end{overpic}
 
-  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/fake_rel_dev_350_fl0_v1_c0_p2}
-  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/fake_rel_dev_350_fl0_v1_c1_p2}
+  \begin{overpic}[clip, rviewport=0 0.145 1 0.94,width=0.45\textwidth]{dedx/fake_rel_dev_350_fl0_v1_c0_p2}
+    \put(18,48){(c)}
+  \end{overpic}
+  \begin{overpic}[clip, rviewport=0 0.145 1 0.94,width=0.45\textwidth]{dedx/fake_rel_dev_350_fl0_v1_c1_p2}
+    \put(18,48){(d)}
+  \end{overpic}
 
-  \includegraphics[clip, rviewport=0 0 1 0.94,width=0.4\textwidth]{dedx/fake_rel_dev_350_fl0_v1_c0_p3}
-  \includegraphics[clip, rviewport=0 0 1 0.94,width=0.4\textwidth]{dedx/fake_rel_dev_350_fl0_v1_c1_p3}
-
-  \caption{Average relative bias of the particle fractions obtained with SDEs for WST and 350 \GeVc dataset.}
-  \label{fig:hadron:dedx:fit:fake:reldev350w}
+  \begin{overpic}[clip, rviewport=0 0 1 0.94,width=0.45\textwidth]{dedx/fake_rel_dev_350_fl0_v1_c0_p3}
+    \put(18,58){(e)}
+  \end{overpic}
+  \begin{overpic}[clip, rviewport=0 0 1 0.94,width=0.45\textwidth]{dedx/fake_rel_dev_350_fl0_v1_c1_p3}
+    \put(18,58){(f)}
+  \end{overpic}
+  
+  \caption{Average relative bias ($\delta_r$, see the definition in the text) of the particle fractions obtained with the SDEs for the RST and 350 \GeVc case. The $\pi^+$ case is shown in (a), $\pi^-$ in (b), K$^+$ in (c), K$^-$ in (d), p$^+$ in (e) and p$^-$ in (f).}
+  \label{fig:hadron:dedx:fit:fake:reldev350r}
 \end{figure}
+
 
 \clearpage
 
 
 %%%%%%%%%% COR %%%%%%%%%%%%%%
-\begin{figure}
+\begin{figure}[!ht]
   \centering
-  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/cor_158_v1_c0_p1}
-  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/cor_158_v1_c1_p1}
 
-  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/cor_158_v1_c0_p2}
-  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/cor_158_v1_c1_p2}
+  \begin{overpic}[clip, rviewport=0 0.145 1 0.94,width=0.45\textwidth]{dedx/cor_158_v1_c0_p1}
+    \put(18,48){(a)}
+  \end{overpic}
+  \begin{overpic}[clip, rviewport=0 0.145 1 0.94,width=0.45\textwidth]{dedx/cor_158_v1_c0_p1}
+    \put(18,48){(b)}
+  \end{overpic}
 
-  \includegraphics[clip, rviewport=0 0 1 0.94,width=0.4\textwidth]{dedx/cor_158_v1_c0_p3}
-  \includegraphics[clip, rviewport=0 0 1 0.94,width=0.4\textwidth]{dedx/cor_158_v1_c1_p3}
+  \begin{overpic}[clip, rviewport=0 0.145 1 0.94,width=0.45\textwidth]{dedx/cor_158_v1_c0_p2}
+    \put(18,48){(c)}
+  \end{overpic}
+  \begin{overpic}[clip, rviewport=0 0.145 1 0.94,width=0.45\textwidth]{dedx/cor_158_v1_c0_p2}
+    \put(18,48){(d)}
+  \end{overpic}
 
-  \caption{Correction factor for WST and 158 \GeVc dataset.}
+  \begin{overpic}[clip, rviewport=0 0 1 0.94,width=0.45\textwidth]{dedx/cor_158_v1_c0_p3}
+    \put(18,58){(e)}
+  \end{overpic}
+  \begin{overpic}[clip, rviewport=0 0 1 0.94,width=0.45\textwidth]{dedx/cor_158_v1_c0_p3}
+    \put(18,58){(f)}
+  \end{overpic}
+  
+  \caption{Correction factors ($c$, see the definition in the text) for the WST and 158 \GeVc case. The $\pi^+$ case is shown in (a), $\pi^-$ in (b), K$^+$ in (c), K$^-$ in (d), p$^+$ in (e) and p$^-$ in (f).}
   \label{fig:hadron:dedx:fit:fake:cor158w}
 \end{figure}
 
-
 %%%%%%%%%% COR %%%%%%%%%%%%%%
-\begin{figure}
+\begin{figure}[!ht]
   \centering
-  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/cor_350_v0_c0_p1}
-  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/cor_350_v0_c1_p1}
 
-  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/cor_350_v0_c0_p2}
-  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/cor_350_v0_c1_p2}
+  \begin{overpic}[clip, rviewport=0 0.145 1 0.94,width=0.45\textwidth]{dedx/cor_350_v0_c0_p1}
+    \put(18,48){(a)}
+  \end{overpic}
+  \begin{overpic}[clip, rviewport=0 0.145 1 0.94,width=0.45\textwidth]{dedx/cor_350_v0_c0_p1}
+    \put(18,48){(b)}
+  \end{overpic}
 
-  \includegraphics[clip, rviewport=0 0 1 0.94,width=0.4\textwidth]{dedx/cor_350_v0_c0_p3}
-  \includegraphics[clip, rviewport=0 0 1 0.94,width=0.4\textwidth]{dedx/cor_350_v0_c1_p3}
+  \begin{overpic}[clip, rviewport=0 0.145 1 0.94,width=0.45\textwidth]{dedx/cor_350_v0_c0_p2}
+    \put(18,48){(c)}
+  \end{overpic}
+  \begin{overpic}[clip, rviewport=0 0.145 1 0.94,width=0.45\textwidth]{dedx/cor_350_v0_c0_p2}
+    \put(18,48){(d)}
+  \end{overpic}
 
-  \caption{Correction factor for RST and 350 \GeVc dataset.}
+  \begin{overpic}[clip, rviewport=0 0 1 0.94,width=0.45\textwidth]{dedx/cor_350_v0_c0_p3}
+    \put(18,58){(e)}
+  \end{overpic}
+  \begin{overpic}[clip, rviewport=0 0 1 0.94,width=0.45\textwidth]{dedx/cor_350_v0_c0_p3}
+    \put(18,58){(f)}
+  \end{overpic}
+  
+  \caption{Correction factors ($c$, see the definition in the text) for the RST and 350 \GeVc case. The $\pi^+$ case is shown in (a), $\pi^-$ in (b), K$^+$ in (c), K$^-$ in (d), p$^+$ in (e) and p$^-$ in (f).}
   \label{fig:hadron:dedx:fit:fake:cor350r}
 \end{figure}
 
 %%%%%%%%%% COR %%%%%%%%%%%%%%
-\begin{figure}
+\begin{figure}[!ht]
   \centering
-  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/cor_350_v1_c0_p1}
-  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/cor_350_v1_c1_p1}
 
-  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/cor_350_v1_c0_p2}
-  \includegraphics[clip, rviewport=0 0.13 1 0.94,width=0.4\textwidth]{dedx/cor_350_v1_c1_p2}
+  \begin{overpic}[clip, rviewport=0 0.145 1 0.94,width=0.45\textwidth]{dedx/cor_350_v1_c0_p1}
+    \put(18,48){(a)}
+  \end{overpic}
+  \begin{overpic}[clip, rviewport=0 0.145 1 0.94,width=0.45\textwidth]{dedx/cor_350_v1_c0_p1}
+    \put(18,48){(b)}
+  \end{overpic}
 
-  \includegraphics[clip, rviewport=0 0 1 0.94,width=0.4\textwidth]{dedx/cor_350_v1_c0_p3}
-  \includegraphics[clip, rviewport=0 0 1 0.94,width=0.4\textwidth]{dedx/cor_350_v1_c1_p3}
+  \begin{overpic}[clip, rviewport=0 0.145 1 0.94,width=0.45\textwidth]{dedx/cor_350_v1_c0_p2}
+    \put(18,48){(c)}
+  \end{overpic}
+  \begin{overpic}[clip, rviewport=0 0.145 1 0.94,width=0.45\textwidth]{dedx/cor_350_v1_c0_p2}
+    \put(18,48){(d)}
+  \end{overpic}
 
-  \caption{Correction factor for WST and 350 \GeVc dataset.}
+  \begin{overpic}[clip, rviewport=0 0 1 0.94,width=0.45\textwidth]{dedx/cor_350_v1_c0_p3}
+    \put(18,58){(e)}
+  \end{overpic}
+  \begin{overpic}[clip, rviewport=0 0 1 0.94,width=0.45\textwidth]{dedx/cor_350_v1_c0_p3}
+    \put(18,58){(f)}
+  \end{overpic}
+  
+  \caption{Correction factors ($c$, see the definition in the text) for the RST and 350 \GeVc case. The $\pi^+$ case is shown in (a), $\pi^-$ in (b), K$^+$ in (c), K$^-$ in (d), p$^+$ in (e) and p$^-$ in (f).}
   \label{fig:hadron:dedx:fit:fake:cor350w}
 \end{figure}
+
 
 
 \clearpage
